old manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wishlist-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # <-- Add this line
  rules:
  - host: wishlist.local
    http:
      paths:
      - path: /wishlist
        pathType: Prefix
        backend:
          service:
            name: wishlist-service
            port:
              number: 8080
      - path: /catalog
        pathType: Prefix
        backend:
          service:
            name: wishlist-service
            port:
              number: 8081
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: wishlist-service
            port:
              number: 8082
